--- a/docs/Emerald Edict.adoc
+++ b/docs/Emerald Edict.adoc
@@ -197,3 +197,70 @@ a|
 == Splash Banned Cards
 
 |===
+
+<<<
+
+== Rotated Cards
+[.text-center]
+All the cards listed here rotated out of the valid card pool and are not allowed to be used in official
+Emerald Legacy tournaments. Unlike Banned Cards, which might be unbanned at some point,
+rotated card will never return to the valid card pool.
+
+[cols="1a,1a,1a",stripes=none,frame=none,grid=none]
+|===
+|
+:show-link-uri!:
+=== image:mons/neutral.svg[width=20] Neutral
+* https://www.emeralddb.org/card/awakened-tsukumogami[Awakened Tsukumogami]
+* https://www.emeralddb.org/card/insightful-gatekeeper[Insightful Gatekeeper]
+* https://www.emeralddb.org/card/mantis-seafarer[Mantis Seafarer]
+
+=== image:mons/crab.svg[width=20] Crab
+* https://www.emeralddb.org/card/common-cause[Common Cause]
+* https://www.emeralddb.org/card/favourable-dealbroker[Favourable Dealbroker]
+* https://www.emeralddb.org/card/iron-mine[Iron Mine]
+* https://www.emeralddb.org/card/kuni-wasteland[Kuni Wasteland]
+
+=== image:mons/crane.svg[width=20] Crane
+* https://www.emeralddb.org/card/asahina-artisan[Asahina Artisan]
+* https://www.emeralddb.org/card/daidoji-uji-2[Daidoji Uji 2]
+* https://www.emeralddb.org/card/kakita-s-final-stance[Kakita's Final Stance]
+* https://www.emeralddb.org/card/the-wealth-of-the-crane[The Wealth of the Crane]
+
+=== image:mons/dragon.svg[width=20] Dragon
+* https://www.emeralddb.org/card/ki-alignment[Ki Alignment]
+* https://www.emeralddb.org/card/mirumoto-daisho[Mirumoto Daishō]
+* https://www.emeralddb.org/card/swell-of-seafoam[Swell of Seafoam]
+* https://www.emeralddb.org/card/unquestioned-heritage[Unquestioned Heritage]
+
+
+=== image:mons/lion.svg[width=20] Lion
+* https://www.emeralddb.org/card/exposed-courtyard[Exposed Courtyard]
+* https://www.emeralddb.org/card/ikoma-tsanuri[Ikoma Tsanuri]
+* https://www.emeralddb.org/card/in-service-to-my-lord[In Service to My Lord]
+* https://www.emeralddb.org/card/logistics[Logistics]
+
+|
+:show-link-uri!:
+=== image:mons/phoenix.svg[width=20] Phoenix
+* https://www.emeralddb.org/card/embrace-the-void[Embrace the Void]
+* https://www.emeralddb.org/card/forgotten-library[Forgotten Library]
+* https://www.emeralddb.org/card/grasp-of-earth[Grasp of Earth]
+* https://www.emeralddb.org/card/jurojin-s-curse[Jurōjin's Curse]
+* https://www.emeralddb.org/card/spell-scroll[Spell Scroll]
+
+=== image:mons/scorpion.svg[width=20] Scorpion
+* https://www.emeralddb.org/card/bayushi-shoju-2[Bayushi Shoju 2]
+* https://www.emeralddb.org/card/duty[Duty]
+* https://www.emeralddb.org/card/governor-s-spy[Governor's Spy]
+* https://www.emeralddb.org/card/sake-house-confidant[Sake House Confidant]
+
+=== image:mons/phoenix.svg[width=20] Unicorn
+* https://www.emeralddb.org/card/command-by-name[Command by Name]
+* https://www.emeralddb.org/card/daikyu[Daikyū]
+* https://www.emeralddb.org/card/khanbulak-benefactor[Khanbulak Benefactor]
+
+|
+:show-link-uri!:
+
+|===
