--- a/docs/Emerald Edict.adoc
+++ b/docs/Emerald Edict.adoc
@@ -255,7 +255,7 @@ rotated cards will never return to the valid card pool.
 * https://www.emeralddb.org/card/governor-s-spy[Governor's Spy]
 * https://www.emeralddb.org/card/sake-house-confidant[Sake House Confidant]
 
-=== image:mons/phoenix.svg[width=20] Unicorn
+=== image:mons/unicorn.svg[width=20] Unicorn
 * https://www.emeralddb.org/card/command-by-name[Command by Name]
 * https://www.emeralddb.org/card/daikyu[Daikyū]
 * https://www.emeralddb.org/card/khanbulak-benefactor[Khanbulak Benefactor]
