--- a/docs/Emerald Edict.adoc
+++ b/docs/Emerald Edict.adoc
@@ -30,7 +30,7 @@ Changes to the previous version are marked in [.new]#bold and green.#
 |
 :show-link-uri!:
 == Banned Cards
-=== image:mons/neutral.svg[width=20] Neutral
+=== image:mons/neutral.svg[width=20] [.neutral]#Neutral#
 * https://www.emeralddb.org/card/accursed-summoning[Accursed Summoning]
 * https://www.emeralddb.org/card/audience-chamber[Audience Chamber]
 * https://www.emeralddb.org/card/bake-kujira[Bake-Kujira]
@@ -53,21 +53,21 @@ Changes to the previous version are marked in [.new]#bold and green.#
 |
 :show-link-uri!:
 == Restricted cards
-=== image:mons/neutral.svg[width=20] Neutral
+=== image:mons/neutral.svg[width=20] [.neutral]#Neutral#
 * https://www.emeralddb.org/card/contested-countryside[Contested Countryside]
 * https://www.emeralddb.org/card/imperial-storehouse[Imperial Storehouse]
 * https://www.emeralddb.org/card/kami-unleashed[Kami Unleashed]
 * https://www.emeralddb.org/card/keeper-initiate[Keeper Initiate]
 * https://www.emeralddb.org/card/proving-ground[Proving Ground]
 
-=== image:mons/crab.svg[width=20] Crab
+=== image:mons/crab.svg[width=20] [.crab]#Crab#
 * https://www.emeralddb.org/card/kuni-laboratory[Kuni Laboratory]
 * https://www.emeralddb.org/card/watch-commander[Watch Commander]
 
-=== image:mons/crane.svg[width=20] Crane
+=== image:mons/crane.svg[width=20] [.crane]#Crane#
 * https://www.emeralddb.org/card/noble-sacrifice[Noble Sacrifice]
 
-=== image:mons/dragon.svg[width=20] Dragon
+=== image:mons/dragon.svg[width=20] [.dragon]#Dragon#
 * https://www.emeralddb.org/card/adorned-temple[Adorned Temple]
 * https://www.emeralddb.org/card/sacred-sanctuary[Sacred Sanctuary]
 
@@ -75,20 +75,20 @@ Changes to the previous version are marked in [.new]#bold and green.#
 |
 :show-link-uri!:
 == Splash Banned Cards
-=== image:mons/crab.svg[width=20] Crab
+=== image:mons/crab.svg[width=20] [.crab]#Crab#
 * https://www.emeralddb.org/card/fight-on[Fight On!]
 * https://www.emeralddb.org/card/reprieve[Reprieve]
 
-=== image:mons/crane.svg[width=20] Crane
+=== image:mons/crane.svg[width=20] [.crane]#Crane#
 * https://www.emeralddb.org/card/festival-of-the-fortunes[Festival for the Fortunes]
 * https://www.emeralddb.org/card/return-the-offense[Return the Offense]
 
-=== image:mons/dragon.svg[width=20] Dragon
+=== image:mons/dragon.svg[width=20] [.dragon]#Dragon#
 * https://www.emeralddb.org/card/indomitable-will[Indomitable Will]
 * https://www.emeralddb.org/card/mirumotos-fury[Mirumoto's Fury]
 * https://www.emeralddb.org/card/shoshi-ni-kie[Shoshi ni Kie]
 
-=== image:mons/lion.svg[width=20] Lion
+=== image:mons/lion.svg[width=20] [.lion]#Lion#
 * https://www.emeralddb.org/card/fan-of-command[Fan of Command]
 * https://www.emeralddb.org/card/glorious-victory[Glorious Victory]
 * https://www.emeralddb.org/card/heroic-resolve[Heroic Resolve]
@@ -98,14 +98,14 @@ Changes to the previous version are marked in [.new]#bold and green.#
 |
 :show-link-uri!:
 == Banned Cards
-=== image:mons/crab.svg[width=20] Crab
+=== image:mons/crab.svg[width=20] [.crab]#Crab#
 * https://www.emeralddb.org/card/deployed-garrison[Deployed Garrison]
 * https://www.emeralddb.org/card/karada-district[Karada District]
 * https://www.emeralddb.org/card/rebuild[Rebuild]
 * https://www.emeralddb.org/card/seal-of-the-crab[Seal of the Crab, role=new]
 * https://www.emeralddb.org/card/yasuki-broker[Yasuki Broker]
 
-=== image:mons/crane.svg[width=20] Crane
+=== image:mons/crane.svg[width=20] [.crane]#Crane#
 * https://www.emeralddb.org/card/a-new-name[A New Name, role=new]
 * https://www.emeralddb.org/card/daidoji-netsu[Daidoji Netsu]
 * https://www.emeralddb.org/card/guest-of-honor[Guest of Honor]
@@ -113,16 +113,16 @@ Changes to the previous version are marked in [.new]#bold and green.#
 * https://www.emeralddb.org/card/magistrate-station[Magistrate Station]
 * https://www.emeralddb.org/card/seal-of-the-crane[Seal of the Crane, role=new]
 
-=== image:mons/dragon.svg[width=20] Dragon
+=== image:mons/dragon.svg[width=20] [.dragon]#Dragon#
 * https://www.emeralddb.org/card/centered-breath[Centered Breath]
 * https://www.emeralddb.org/card/seal-of-the-dragon[Seal of the Dragon, role=new]
 * https://www.emeralddb.org/card/togashi-mitsu[Togashi Mitsu 1]
 
-=== image:mons/lion.svg[width=20] Lion
+=== image:mons/lion.svg[width=20] [.lion]#Lion#
 * https://www.emeralddb.org/card/lion-s-pride-paragon[Lion’s Pride Paragon]
 * https://www.emeralddb.org/card/seal-of-the-lion[Seal of the Lion, role=new]
 
-=== image:mons/phoenix.svg[width=20] Phoenix
+=== image:mons/phoenix.svg[width=20] [.phoenix]#Phoenix#
 * https://www.emeralddb.org/card/calling-the-storm[Calling the Storm]
 * https://www.emeralddb.org/card/consumed-by-five-fires[Consumed by Five Fires]
 * https://www.emeralddb.org/card/dance-of-chikusho-do[Dance of Chikushō-dō]
@@ -134,24 +134,24 @@ Changes to the previous version are marked in [.new]#bold and green.#
 a|
 :show-link-uri!:
 == Restricted cards
-=== image:mons/lion.svg[width=20] Lion
+=== image:mons/lion.svg[width=20] [.lion]#Lion#
 * https://www.emeralddb.org/card/called-to-war[Called to War]
 * https://www.emeralddb.org/card/chronicler-of-conquests[Chronicler of Conquests]
 * https://www.emeralddb.org/card/field-tactician[Field Tactician]
 * https://www.emeralddb.org/card/master-tactician[Master Tactician]
 
-=== image:mons/phoenix.svg[width=20] Phoenix
+=== image:mons/phoenix.svg[width=20] [.phoenix]#Phoenix#
 * https://www.emeralddb.org/card/isawa-tadaka-2[Isawa Tadaka 2]
 * https://www.emeralddb.org/card/display-of-power[Display of Power]
 
 
-=== image:mons/scorpion.svg[width=20] Scorpion
+=== image:mons/scorpion.svg[width=20] [.scorpion]#Scorpion#
 * https://www.emeralddb.org/card/a-fate-worse-than-death[A Fate Worse than Death]
 * https://www.emeralddb.org/card/alibi-artist[Alibi Artist,role=line-through new]
 * https://www.emeralddb.org/card/dispatch-to-nowhere[Dispatch to Nowhere]
 * https://www.emeralddb.org/card/mark-of-shame[Mark of Shame]
 
-=== image:mons/unicorn.svg[width=20] Unicorn
+=== image:mons/unicorn.svg[width=20] [.unicorn]#Unicorn#
 * https://www.emeralddb.org/card/captive-audience[Captive Audience,role=new]
 * https://www.emeralddb.org/card/scouted-terrain[Scouted Terrain]
 * https://www.emeralddb.org/card/swift-magistrate[Swift Magistrate]
@@ -160,11 +160,11 @@ a|
 a|
 :show-link-uri!:
 == Splash Banned Cards
-=== image:mons/phoenix.svg[width=20] Phoenix
+=== image:mons/phoenix.svg[width=20] [.phoenix]#Phoenix#
 * https://www.emeralddb.org/card/against-the-waves[Against the Waves,role=line-through new]
 * https://www.emeralddb.org/card/display-of-power[Display of Power]
 
-=== image:mons/unicorn.svg[width=20] Unicorn
+=== image:mons/unicorn.svg[width=20] [.unicorn]#Unicorn#
 * https://www.emeralddb.org/card/favored-mount[Favored Mount]
 * https://www.emeralddb.org/card/force-of-the-river[Force of the River]
 * https://www.emeralddb.org/card/gaijin-customs[Gaijin Customs]
@@ -176,7 +176,7 @@ a|
 |
 :show-link-uri!:
 == Banned Cards
-=== image:mons/scorpion.svg[width=20] Scorpion
+=== image:mons/scorpion.svg[width=20] [.scorpion]#Scorpion#
 * https://www.emeralddb.org/card/cunning-magistrate[Cunning Magistrate]
 * https://www.emeralddb.org/card/forged-edict[Forged Edict]
 * https://www.emeralddb.org/card/hidden-moon-dojo[Hidden Moon Dōjō]
@@ -184,7 +184,7 @@ a|
 * https://www.emeralddb.org/card/subterfuge[Subterfuge]
 * https://www.emeralddb.org/card/yogo-junzo[Yogo Junzo]
 
-=== image:mons/unicorn.svg[width=20] Unicorn
+=== image:mons/unicorn.svg[width=20] [.unicorn]#Unicorn#
 * https://www.emeralddb.org/card/seal-of-the-unicorn[Seal of the Unicorn, role=new]
 * https://www.emeralddb.org/card/spyglass[Spyglass]
 
@@ -210,31 +210,31 @@ rotated cards will never return to the valid card pool.
 |===
 |
 :show-link-uri!:
-=== image:mons/neutral.svg[width=20] Neutral
+=== image:mons/neutral.svg[width=20] [.neutral]#Neutral#
 * https://www.emeralddb.org/card/awakened-tsukumogami[Awakened Tsukumogami]
 * https://www.emeralddb.org/card/insightful-gatekeeper[Insightful Gatekeeper]
 * https://www.emeralddb.org/card/mantis-seafarer[Mantis Seafarer]
 
-=== image:mons/crab.svg[width=20] Crab
+=== image:mons/crab.svg[width=20] [.crab]#Crab#
 * https://www.emeralddb.org/card/common-cause[Common Cause]
 * https://www.emeralddb.org/card/favourable-dealbroker[Favourable Dealbroker]
 * https://www.emeralddb.org/card/iron-mine[Iron Mine]
 * https://www.emeralddb.org/card/kuni-wasteland[Kuni Wasteland]
 
-=== image:mons/crane.svg[width=20] Crane
+=== image:mons/crane.svg[width=20] [.crane]#Crane#
 * https://www.emeralddb.org/card/asahina-artisan[Asahina Artisan]
 * https://www.emeralddb.org/card/daidoji-uji-2[Daidoji Uji 2]
 * https://www.emeralddb.org/card/kakita-s-final-stance[Kakita's Final Stance]
 * https://www.emeralddb.org/card/the-wealth-of-the-crane[The Wealth of the Crane]
 
-=== image:mons/dragon.svg[width=20] Dragon
+=== image:mons/dragon.svg[width=20] [.dragon]#Dragon#
 * https://www.emeralddb.org/card/ki-alignment[Ki Alignment]
 * https://www.emeralddb.org/card/mirumoto-daisho[Mirumoto Daishō]
 * https://www.emeralddb.org/card/swell-of-seafoam[Swell of Seafoam]
 * https://www.emeralddb.org/card/unquestioned-heritage[Unquestioned Heritage]
 
 
-=== image:mons/lion.svg[width=20] Lion
+=== image:mons/lion.svg[width=20] [.lion]#Lion#
 * https://www.emeralddb.org/card/exposed-courtyard[Exposed Courtyard]
 * https://www.emeralddb.org/card/ikoma-tsanuri[Ikoma Tsanuri]
 * https://www.emeralddb.org/card/in-service-to-my-lord[In Service to My Lord]
@@ -242,20 +242,20 @@ rotated cards will never return to the valid card pool.
 
 |
 :show-link-uri!:
-=== image:mons/phoenix.svg[width=20] Phoenix
+=== image:mons/phoenix.svg[width=20] [.phoenix]#Phoenix#
 * https://www.emeralddb.org/card/embrace-the-void[Embrace the Void]
 * https://www.emeralddb.org/card/forgotten-library[Forgotten Library]
 * https://www.emeralddb.org/card/grasp-of-earth[Grasp of Earth]
 * https://www.emeralddb.org/card/jurojin-s-curse[Jurōjin's Curse]
 * https://www.emeralddb.org/card/spell-scroll[Spell Scroll]
 
-=== image:mons/scorpion.svg[width=20] Scorpion
+=== image:mons/scorpion.svg[width=20] [.scorpion]#Scorpion#
 * https://www.emeralddb.org/card/bayushi-shoju-2[Bayushi Shoju 2]
 * https://www.emeralddb.org/card/duty[Duty]
 * https://www.emeralddb.org/card/governor-s-spy[Governor's Spy]
 * https://www.emeralddb.org/card/sake-house-confidant[Sake House Confidant]
 
-=== image:mons/unicorn.svg[width=20] Unicorn
+=== image:mons/unicorn.svg[width=20] [.unicorn]#Unicorn#
 * https://www.emeralddb.org/card/command-by-name[Command by Name]
 * https://www.emeralddb.org/card/daikyu[Daikyū]
 * https://www.emeralddb.org/card/khanbulak-benefactor[Khanbulak Benefactor]
